deps/v8/test/message/syntactic-tail-call-in-for-of.out
*%(basename)s:14: SyntaxError: Tail call expression in for-in/of body
    return continue f()  ;
           ^^^^^^^^^^^^
SyntaxError: Tail call expression in for-in/of body
